<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#ffff"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/return_left"
                android:layout_width="10dp"
                android:layout_height="17dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:src="@drawable/left_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:autoSizeMaxTextSize="18sp"
                android:text="@string/personal_message"
                android:textColor="#000000" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorContent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="187dp"
                android:background="#ffff">

                <RelativeLayout
                    android:id="@+id/personal_head"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/personal_headcase"
                        android:layout_width="82dp"
                        android:layout_height="82dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/bg_ring1" />

                    <ImageView
                        android:layout_width="78dp"
                        android:layout_height="78dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/bg_ring2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/personal_headcase"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/editor_personal_headcase"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="27dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/green_wod" />

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/personal_head_img"
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        fresco:roundAsCircle="true" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="#ffff"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/nickname" />

                <EditText
                    android:id="@+id/personal_name_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:gravity="right"
                    android:hint="@string/setting_false"
                    android:textColor="@color/colorWhitegray"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:background="#ffffff"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="#ffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/sex" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="20dp"
                    android:text="无"
                    android:textColor="@color/colorWhitegray" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:background="#ffffff"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="#ffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/birthday" />

                <TextView
                    android:id="@+id/timepicker_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="20dp"
                    android:text="1992.10.10"
                    android:textColor="@color/colorWhitegray" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="20dp"
                android:layout_height="1dp"
                android:background="#ffffff"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="#ffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/photo_number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="20dp"
                    android:text="13660992126"
                    android:textColor="@color/colorWhitegray" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginTop="10dp"
                android:background="#ffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/register_time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="20dp"
                    android:text="2017.10.10" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="119dp">

                <Button
                    android:id="@+id/updata_permsg"
                    android:layout_width="283dp"
                    android:layout_height="47dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape"
                    android:text="确定"
                    android:textColor="#ffffff" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>